@@ -1,32 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>English</string>
-    <key>CFBundleExecutable</key>
-    <string>scid</string>
-    <key>CFBundleGetInfoString</key>
-    <string>Scid 3.6.23</string>
-    <key>CFBundleIconFile</key>
-    <string>scid.icns</string>
-    <key>CFBundleIdentifier</key>
-    <string>fr.free.Scid</string>
-    <key>CFBundleName</key>
-    <string>Scid</string>
-    <key>CFBundleInfoDictionaryVersion</key>
-    <string>6.0</string>
-    <key>CFBundlePackageType</key>
-    <string>APPL</string>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
-    <key>CFBundleSignature</key>
-    <string>Scid</string>
-    <key>CFBundleVersion</key>
-    <string>1.0.0</string>
-    <key>NSHumanReadableCopyright</key>
-    <string>Copyright (C) Shane Hudson and others</string>
-    <key>LSMinimumSystemVersion</key>
-    <string>10.4</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>si3</string>
+				<string>sg3</string>
+				<string>sn3</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Scid Database</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>Scid</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>pgn</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>text/plain</string>
+				<string>application/x-chess-pgn</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Portable Game Notation (PGN)</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>cpgn</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>epd</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>text/plain</string>
+				<string>application/x-chess-epd</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Extended Position Description (EPD)</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>cepd</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>gz</string>
+				<string>gzip</string>
+				<string>GZ</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>application/gzip</string>
+				<string>application/x-gzip</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Gzip File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>Gzip</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.gnu.gnu-zip-archive</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>sso</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>text/plain</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Scid SearchOptions File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>ssso</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>sor</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>text/plain</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Scid Repertoire File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>ssor</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>sem</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>text/plain</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Scid Email File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>ssem</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+		</dict>
+	</array>
+	<key>CFBundleExecutable</key>
+	<string>scid</string>
+	<key>CFBundleGetInfoString</key>
+	<string>Scid 3.6.25</string>
+	<key>CFBundleIconFile</key>
+	<string>scid.icns</string>
+	<key>CFBundleIdentifier</key>
+	<string>net.sf.scid</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Scid</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.0</string>
+	<key>CFBundleSignature</key>
+	<string>Scid</string>
+	<key>CFBundleVersion</key>
+	<string>1.0.0</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.4</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright (C) Shane Hudson and others</string>
 </dict>
 </plist>
